--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Under Construction</title>
+  <title>Razu Mohiuddin</title>
+  <link rel="stylesheet" href="style.css">
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -26,7 +27,26 @@
 </head>
 <body>
   <h1>Website Coming Soon</h1>
-  <p>Site under construction, please try again later.</p>
-  <img src="construction.png" alt="under construction" />
+  <img width="400px" src="construction.svg" alt="under construction" />
 </body>
+
+
+
+  <!-- Footer Section -->
+  <footer>
+
+    <ul class="social-media">
+		<li><a href="https://www.linkedin.com/in/mohiuddinrazu/" download target="_blank"><img src="linkedin-icon.svg" alt="Linkedin"></a></li>
+	<li><a href="https://www.researchgate.net/profile/Razu-Mohiuddin" download target="_blank"><img src="researchgate-icon.png" alt="ResearchGate"></a></li>
+	<li><a href="https://www.twitter.com/mohiuddin_razu" download target="_blank"><img src="twitter-icon.png" alt="Twitter"></a></li>
+      <li><a href="https://www.facebook.com/mohiuddinrazu" download target="_blank"><img src="facebook-icon.png" alt="Facebook"></a></li>
+      <li><a href="https://www.instagram.com/mohiuddinrazu" download target="_blank"><img src="instagram-icon.png" alt="Instagram"></a></li>
+      <li><a href="https://inspirehep.net/authors/1840725" download target="_blank"><img src="inspire-icon.jpg" alt="INSPIREHEP"></a></li>
+    </ul>
+
+    <p>&copy; 2023 Razu Mohiuddin. All rights reserved.</p>
+  </footer>
+
+
+
 </html>
