--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </style>
 </head>
 <body>
-  <h1>Website Coming Soon</h1>
+  <h1>Coming Soon..</h1>
   <img width="400px" src="construction.svg" alt="under construction" />
 </body>
 
@@ -36,7 +36,7 @@
   <footer>
 
     <ul class="social-media">
-		<li><a href="https://www.linkedin.com/in/mohiuddinrazu/" download target="_blank"><img src="linkedin-icon.svg" alt="Linkedin"></a></li>
+		<li><a href="https://www.linkedin.com/in/mohiuddinrazu/" download target="_blank"><img src="linkedin-icon.png" alt="Linkedin"></a></li>
 	<li><a href="https://www.researchgate.net/profile/Razu-Mohiuddin" download target="_blank"><img src="researchgate-icon.png" alt="ResearchGate"></a></li>
 	<li><a href="https://www.twitter.com/mohiuddin_razu" download target="_blank"><img src="twitter-icon.png" alt="Twitter"></a></li>
       <li><a href="https://www.facebook.com/mohiuddinrazu" download target="_blank"><img src="facebook-icon.png" alt="Facebook"></a></li>
