--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
   <!-- Footer Section -->
   <footer>
 
-    <ul class="social-media">
-		<li><a href="https://www.linkedin.com/in/mohiuddinrazu/" download target="_blank"><img src="linkedin-icon.png" alt="Linkedin"></a></li>
+  <ul class="social-media">
+		<li><a href="https://www.linkedin.com/in/mohiuddinrazu/" download target="_blank"><img src="linkedin-icon.svg" alt="Linkedin"></a></li>
 	<li><a href="https://www.researchgate.net/profile/Razu-Mohiuddin" download target="_blank"><img src="researchgate-icon.png" alt="ResearchGate"></a></li>
-	<li><a href="https://www.twitter.com/mohiuddin_razu" download target="_blank"><img src="twitter-icon.png" alt="Twitter"></a></li>
-      <li><a href="https://www.facebook.com/mohiuddinrazu" download target="_blank"><img src="facebook-icon.png" alt="Facebook"></a></li>
-      <li><a href="https://www.instagram.com/mohiuddinrazu" download target="_blank"><img src="instagram-icon.png" alt="Instagram"></a></li>
+	<li><a href="https://www.twitter.com/mohiuddin_razu" download target="_blank"><img src="twitter-icon.svg" alt="Twitter"></a></li>
+      <li><a href="https://www.facebook.com/mohiuddinrazu" download target="_blank"><img src="facebook-icon.svg" alt="Facebook"></a></li>
+      <li><a href="https://scholar.google.com/citations?user=JLcRozYAAAAJ&hl=en" download target="_blank"><img src="google_scholar-icon.svg" alt="Google Scholar"></a></li>
       <li><a href="https://inspirehep.net/authors/1840725" download target="_blank"><img src="inspire-icon.jpg" alt="INSPIREHEP"></a></li>
     </ul>
   </footer>
