--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Razu Mohiuddin</title>
+  <title>Razu Mohiuddin - About</title>
   <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" href="icon.ico" />
 </head>
@@ -32,51 +32,32 @@
       </ul>
     </nav>
   </header>
-  <!-- Research Section -->
-  <section id="research">
+
+  <!-- About Section -->
+  <section id="about">
+    <h2>About Me</h2>
+
+    <div class="about-info">
+
+
+
+    <img id="profile-img" 
+	src="profile.jpg" 
+	alt="Razu Mohiuddin - Graduate Student in Physics">
+      
 
 <br>
-<a href="https://case.edu/" download target="_blank"><img src="cwru-logo.png" alt="CWRU logo"></img></a> <br>
+<p>Razu Mohiuddin is a graduate student in Physics at Case Western Reserve University. Razu is a member of the Monreal Lab and the Project 8 collaboration, where he is conducting research in the exciting field of neutrino physics.</p>
+      <p>He received his Bachelor's degree in Physics from University of Dhaka. During this time he was a member of Community of Physics and conducted research on electromagnetism and gravitational wave as part of the oraganization.</p><br>
+
+  </div>
 
 
-<div>
-  <span class="horizontal-shake">Hi!</span>
-</div> 
 
-<p>I am an experimental particle astrophysics doctoral student at Case Western Reserve University. I'm currently working in the <a href="https://bmonreal.github.io/" download target="_blank" style="text-decoration: none">Monreal Lab</a> and the <a href="https://www.project8.org/" download target="_blank" style="text-decoration: none">Project 8 collaboration</a>, pursuing my research interests in neutrino physics. I am passionate about understanding the fundamental properties of neutrinos and their role in the universe. My research focuses on developing new techniques to measure neutrino mass with high precision, with the goal of shedding light on some of the most pressing questions in particle physics and cosmology. Through my work, I hope to contribute to our understanding of the origins of matter and the nature of the universe. I am also interested in optics, astrophysics, gravitation and machine learning.
-As a scientist, I am committed to fostering collaboration and community in the pursuit of scientific discovery. <br>
-Please feel free to get in touch if you have any questions!</p>
+	<div class="btn-container">
+ <a href="Crriculum_Vitae_Razu_Mohiuddin.pdf" download target="_blank"><button class="btn">Open CV</button></a>   	</div>
   </section>
-
-
-
-  <!-- Publications Section -->
-  <section id="publications">
-    <div class="publications-info">
-   
-
-
-   <h3>Links</h3>
-
-<p>
-All links opens in new page. <br>
-
-<a href="https://bmonreal.github.io/" download target="_blank">Monreal Lab</a> <br>
-
-<a href="https://case.edu/" download target="_blank">Case Western Reserve University</a> <br>
-
-<a href="https://project8.net/" download target="_blank">The Project 8 Experiment</a> <br>
-
-<a href="https://physics.case.edu/" download target="_blank">The Physics Department</a> <br>
-
-
-<a href="https://physics.case.edu/graduate-studies/apply-gradstudies/" download target="_blank"> Physics Graduate Program</a> <br>
-
-
-
-
-</p>
-
+</body>
 
 
   <!-- Footer Section -->
@@ -91,10 +72,7 @@ All links opens in new page. <br>
       <li class="icon-animation"><a href="https://inspirehep.net/authors/1840725" download target="_blank"><img src="inspire-icon.jpg" alt="INSPIREHEP"></a></li>
     </ul>
 
-	
-<p>&copy; 2023 Razu Mohiuddin. All rights reserved.</p>
- 	
-
+    <p>&copy; 2023 Razu Mohiuddin. All rights reserved.</p>
   </footer>
 
 <div  class="spacer"> . </div> .
