--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Razu Mohiuddin</title>
+  <title>Razu Mohiuddin - Contact</title>
   <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" href="icon.ico" />
 </head>
@@ -32,55 +32,24 @@
       </ul>
     </nav>
   </header>
-  <!-- Research Section -->
-  <section id="research">
 
-<br>
-<a href="https://case.edu/" download target="_blank"><img src="cwru-logo.png" alt="CWRU logo"></img></a> <br>
+  <!-- Contact Section -->
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>Feel free to contact me by emailing at <img 
+    src="casemail.png" 
+    alt="email address" height = 25px 
+/> 
+    
+	<br><br>Mailing Address: <br>CWRU Physics, Rockefeller Building <br>2076 Adelbert Road <br>Room 118A <br>Cleveland, OH 44106 </p>
 
-
-<div>
-  <span class="horizontal-shake">Hi!</span>
-</div> 
-
-<p>I am an experimental particle astrophysics doctoral student at Case Western Reserve University. I'm currently working in the <a href="https://bmonreal.github.io/" download target="_blank" style="text-decoration: none">Monreal Lab</a> and the <a href="https://www.project8.org/" download target="_blank" style="text-decoration: none">Project 8 collaboration</a>, pursuing my research interests in neutrino physics. I am passionate about understanding the fundamental properties of neutrinos and their role in the universe. My research focuses on developing new techniques to measure neutrino mass with high precision, with the goal of shedding light on some of the most pressing questions in particle physics and cosmology. Through my work, I hope to contribute to our understanding of the origins of matter and the nature of the universe. I am also interested in optics, astrophysics, gravitation and machine learning.
-As a scientist, I am committed to fostering collaboration and community in the pursuit of scientific discovery. <br>
-Please feel free to get in touch if you have any questions!</p>
-  </section>
-
-
-
-  <!-- Publications Section -->
-  <section id="publications">
-    <div class="publications-info">
-   
-
-
-   <h3>Links</h3>
-
-<p>
-All links opens in new page. <br>
-
-<a href="https://bmonreal.github.io/" download target="_blank">Monreal Lab</a> <br>
-
-<a href="https://case.edu/" download target="_blank">Case Western Reserve University</a> <br>
-
-<a href="https://project8.net/" download target="_blank">The Project 8 Experiment</a> <br>
-
-<a href="https://physics.case.edu/" download target="_blank">The Physics Department</a> <br>
-
-
-<a href="https://physics.case.edu/graduate-studies/apply-gradstudies/" download target="_blank"> Physics Graduate Program</a> <br>
-
-
-
-
-</p>
+	</section>
 
 
 
   <!-- Footer Section -->
   <footer>
+ 
 
      <ul class="social-media">
 		<li class="icon-animation"><a href="https://www.linkedin.com/in/mohiuddinrazu/" download target="_blank"><img src="linkedin-icon.svg" alt="Linkedin"></a></li>
@@ -91,11 +60,12 @@ All links opens in new page. <br>
       <li class="icon-animation"><a href="https://inspirehep.net/authors/1840725" download target="_blank"><img src="inspire-icon.jpg" alt="INSPIREHEP"></a></li>
     </ul>
 
-	
-<p>&copy; 2023 Razu Mohiuddin. All rights reserved.</p>
- 	
 
+    
+	<p>&copy; 2023 Razu Mohiuddin. All rights reserved.</p>
   </footer>
+
+</body>
 
 <div  class="spacer"> . </div> .
 
