--- a/publications.html
+++ b/publications.html
@@ -13,7 +13,7 @@
 </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Razu Mohiuddin</title>
+  <title>Razu Mohiuddin - Publications</title>
   <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" href="icon.ico" />
 </head>
@@ -32,50 +32,42 @@
       </ul>
     </nav>
   </header>
-  <!-- Research Section -->
-  <section id="research">
-
-<br>
-<a href="https://case.edu/" download target="_blank"><img src="cwru-logo.png" alt="CWRU logo"></img></a> <br>
-
-
-<div>
-  <span class="horizontal-shake">Hi!</span>
-</div> 
-
-<p>I am an experimental particle astrophysics doctoral student at Case Western Reserve University. I'm currently working in the <a href="https://bmonreal.github.io/" download target="_blank" style="text-decoration: none">Monreal Lab</a> and the <a href="https://www.project8.org/" download target="_blank" style="text-decoration: none">Project 8 collaboration</a>, pursuing my research interests in neutrino physics. I am passionate about understanding the fundamental properties of neutrinos and their role in the universe. My research focuses on developing new techniques to measure neutrino mass with high precision, with the goal of shedding light on some of the most pressing questions in particle physics and cosmology. Through my work, I hope to contribute to our understanding of the origins of matter and the nature of the universe. I am also interested in optics, astrophysics, gravitation and machine learning.
-As a scientist, I am committed to fostering collaboration and community in the pursuit of scientific discovery. <br>
-Please feel free to get in touch if you have any questions!</p>
-  </section>
-
-
 
   <!-- Publications Section -->
   <section id="publications">
+    <h2>Publications</h2>
     <div class="publications-info">
-   
 
 
-   <h3>Links</h3>
+<p>For an up-to-date list of publications, click on Google Scholar or INSPIRE icon at the bottom of this page.</p>
 
-<p>
-All links opens in new page. <br>
+      <h3>Journal Articles</h3>
 
-<a href="https://bmonreal.github.io/" download target="_blank">Monreal Lab</a> <br>
-
-<a href="https://case.edu/" download target="_blank">Case Western Reserve University</a> <br>
-
-<a href="https://project8.net/" download target="_blank">The Project 8 Experiment</a> <br>
-
-<a href="https://physics.case.edu/" download target="_blank">The Physics Department</a> <br>
-
-
-<a href="https://physics.case.edu/graduate-studies/apply-gradstudies/" download target="_blank"> Physics Graduate Program</a> <br>
+      </ul>
+	  <li>"SYNCA: A Synthetic Cyclotron Antenna for the Project 8 Collaboration" JINST 18 (2023) 01, P01034</li></ul>
+	  <li>"Tritium Beta Spectrum and Neutrino Mass Limit from Cyclotron Radiation Emission Spectroscopy
+" arXiv: 2212.05048</li> </ul>
+        <li>"The Project 8 Neutrino Mass Experiment"  New J.Phys. 24 (2022) 5, 053013</li>
+      </ul>
+	  <li>"Viterbi decoding of CRES signals in Project 8"   2022 Snowmass Summer Study | arXiv: 2203.07349</li>
+      </ul>
+	  <li>"Bayesian analysis of a future β decay experiment's sensitivity to neutrino mass scale and ordering" Phys.Rev.C 103 (2021) 6, 065501 </li> </ul>
 
 
+<br><br>
 
 
-</p>
+
+      <h3>Conference Proceedings</h3>
+      </ul>
+        <li>Mohiuddin, R. "Deep Learning based CRES track and event reconstruction in Project 8" Bulletin of the American Physical Society, 2022 - APS</li>
+      </ul>
+
+    </div>
+  </section>
+
+
+</body>
 
 
 
@@ -91,12 +83,10 @@ All links opens in new page. <br>
       <li class="icon-animation"><a href="https://inspirehep.net/authors/1840725" download target="_blank"><img src="inspire-icon.jpg" alt="INSPIREHEP"></a></li>
     </ul>
 
-	
-<p>&copy; 2023 Razu Mohiuddin. All rights reserved.</p>
- 	
 
+    <p>&copy; 2023 Razu Mohiuddin. All rights reserved.</p>
   </footer>
+
 
 <div  class="spacer"> . </div> .
 
-</html>
