--- a/research.html
+++ b/research.html
@@ -44,7 +44,7 @@ As part of the Project 8 Collaboration, I am working in a few different projects
       </p>
       <h3>Previous Projects</h3>
       <p>
-        	I worked with the Gravitational Wave International Committee (GWIC) and <a href="https://www.cpbd.ac/">Community of Physics</a> in the past.
+        	I worked with the Gravitational Wave International Committee (GWIC) and <a href="https://www.cpbd.ac/" download target="_blank">Community of Physics</a> in the past.
       </p>
     </div>
   </section>
