--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ All links opens in new page. <br>
 
 <a href="https://case.edu/" download target="_blank">Case Western Reserve University</a> <br>
 
-<a href="https://project8.net/" download target="_blank">The Project 8 Experiment</a> <br>
+<a href="https://project8.org/" download target="_blank">The Project 8 Experiment</a> <br>
 
 <a href="https://physics.case.edu/" download target="_blank">The Physics Department</a> <br>
 
