--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ Please feel free to get in touch if you have any questions!</p>
    <h3>Links</h3>
 
 <p>
-All links opens in new page. <br>
+All links open in new page. <br>
 
 <a href="https://bmonreal.github.io/" download target="_blank">Monreal Lab</a> <br>
 
