--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <section id="research">
 
 <br>
-<a href="https://case.edu/" download target="_blank"><img src="cwru-logo.png" width = 800px alt="CWRU logo"></img></a> <br>
+<a href="https://case.edu/" download target="_blank"><img src="cwru-logo.png" width=630px padding=10px alt="CWRU logo"></img></a> <br>
 
 
 <div>
