--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
             </span>
           </div>
           <a
-            href="https://inspirehep.net/authors/1840725"
+            href="Crriculum_Vitae_Razu_Mohiuddin.pdf"
             target="_blank"
             rel="noreferrer noopener"
             class="home-link11 Anchor button"
