--- a/404.html
+++ b/404.html
@@ -55,7 +55,7 @@
         </div>
         <div class="not-found-container2">
           <h2 class="not-found-text2">
-            WE ARE SORRY, BUT THE PAGE YOU REQUESTED WAS NOT FOUND
+            I AM SORRY, BUT THE PAGE YOU REQUESTED WAS NOT FOUND
           </h2>
         </div>
       </div>
