compatibility issues fixed
made site full-screen for larger screens, fixed issues with mobile devices

--- a/404.html
+++ b/404.html
@@ -55,8 +55,17 @@
         </div>
         <div class="not-found-container2">
           <h2 class="not-found-text2">
-            I AM SORRY, BUT THE PAGE YOU REQUESTED WAS NOT FOUND
+            I AM SORRY, BUT THE PAGE YOU REQUESTED DOES NOT EXIST
           </h2>
+	  <h3>
+		<a
+                  href="https://mohiuddinrazu.github.io"
+                  rel="noreferrer noopener"
+                  class="home-link10"
+                >
+                  Click here to go back to the main site
+                </a>
+	  </h3>
         </div>
       </div>
     </div>
