--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
                   </a>
                   <br />
                   <a
-                    href="https://project8.net/"
+                    href="https://project8.org/"
                     target="_blank"
                     rel="noreferrer noopener"
                     class="home-link15"
