added internship info
added internship job description

--- a/index.html
+++ b/index.html
@@ -212,10 +212,10 @@
 
                 <span id="pubs" class="home-text20">
                     <a href="https://www.roche.com/" target="_blank" rel="noreferrer noopener">
-                        <img src="public/Hoffmann-La_Roche_logo.svg" alt="Roche Logo" /> 
+                        <img src="public/Hoffmann-La_Roche_logo.svg" alt="Roche Logo", class = "company-logos" /> 
                     </a>
                 I have worked at Roche Diabetes Care Inc. as an Algorithms and Advanced Analytics Summer Intern 2024 in their Mathematics Algoritms and Data Sciences Department. My job responsibilities involved: 
-                    <ul>
+                    <ul class="bullet-list">
                         <li>Using real-world data to develop virtual patient models</li>
                         <li>Developing models for use in diabetes management tools for patients</li>
                         <li>Assessment of novel techniques to reduce external dependencies</li>
