--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                     <a href="https://www.roche.com/" target="_blank" rel="noreferrer noopener">
                         <img src="public/Hoffmann-La_Roche_logo.svg" alt="Roche Logo", class = "company-logos" /> 
                     </a>
-                    I have worked at Roche Diabetes Care Inc. as an Algorithms and Advanced Analytics Summer Intern 2024 in their Mathematics Algoritms and Data Sciences Department. My job responsibilities involved:
+                  In the summer of 2024, I interned at Roche Diabetes Care Inc. in the Mathematics, Algorithms & Data Sciences Department, focusing on algorithms and advanced analytics. My responsibilities included:
                     <ul class="bullet-list">
                         <li>Using real-world data to develop virtual patient models</li>
                         <li>Developing models for use in diabetes management tools for patients</li>
