updated style reference

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 
                 <span id="pubs" class="home-text20">
                     <a href="https://www.roche.com/" target="_blank" rel="noreferrer noopener">
-                        <img src="public/Hoffmann-La_Roche_logo.svg" alt="Roche Logo", class = "company-logos" /> 
+                        <img src="public/Hoffmann-La_Roche_logo.svg" alt="Roche Logo", class = "home-image03" /> 
                     </a>
                   In the summer of 2024, I interned at Roche Diabetes Care Inc. in the Mathematics, Algorithms & Data Sciences Department, focusing on algorithms and advanced analytics. My responsibilities included:
                     <ul class="bullet-list">
