updated logo style

--- a/index.html
+++ b/index.html
@@ -210,10 +210,13 @@
               </span>
               <span class="home-heading3">Past work</span>
 
-                <span id="pubs" class="home-text20">
-                    <a href="https://www.roche.com/" target="_blank" rel="noreferrer noopener">
-                        <img src="public/Hoffmann-La_Roche_logo.svg" alt="Roche Logo", class = "home-image03" /> 
-                    </a>
+                  <img
+                  alt="Roche Logo"
+                  src="public/Hoffmann-La_Roche_logo.svg"
+                  href="https://www.roche.com/" 
+                  target="_blank"
+                  class="home-image03"
+                />
                   In the summer of 2024, I interned at Roche Diabetes Care Inc. in the Mathematics, Algorithms & Data Sciences Department, focusing on algorithms and advanced analytics. My responsibilities included:
                     <ul class="bullet-list">
                         <li>Using real-world data to develop virtual patient models</li>
