updated logo placement

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                   src="public/Hoffmann-La_Roche_logo.svg"
                   href="https://www.roche.com/" 
                   target="_blank"
-                  class="home-image03"
+                  class="company-logos"
                 />
                   In the summer of 2024, I interned at Roche Diabetes Care Inc. in the Mathematics, Algorithms & Data Sciences Department, focusing on algorithms and advanced analytics. My responsibilities included:
                     <ul class="bullet-list">
