fixed bookmark reference

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <br />
               </h1>
               <span class="home-text04">
-                <span>Hello!</span>
+                <span>Hi there!</span>
                 <br class="home-text06" />
                 <br />
                 <span>
@@ -213,7 +213,7 @@
                   <img
                   alt="Roche Logo"
                   src="public/Hoffmann-La_Roche_logo.svg"
-                  href="https://www.roche.com/" 
+                  href="https://www.roche.com/"
                   target="_blank"
                   class="company-logos"
                 />
@@ -229,14 +229,8 @@
                     <hr>
                     <span>
                         I worked with the Gravitational Wave International Committee 
-                        (GWIC) and 
-                    </span>
-                
-                    <a href="https://www.cpbd.ac" target="_blank" rel="noreferrer noopener" class="home-link10">
-                        Community of Physics
-                    </a>
-                
-                    <span>in the past.</span>
+                        (GWIC) and <a href="https://www.cpbd.ac" target="_blank" rel="noreferrer noopener" class="home-link10" id="pubs">
+                        Community of Physics </a> in the past.
                 </span>
             </div>
           </div>
