fixed broken CP url

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                     <hr>
                     <span>
                         I worked with the Gravitational Wave International Committee 
-                        (GWIC) and <a href="https://www.cpbd.ac" target="_blank" rel="noreferrer noopener" class="home-link10" id="pubs">
+                        (GWIC) and <a href="https://www.linkedin.com/school/communityofphysics/" target="_blank" rel="noreferrer noopener" class="home-link10" id="pubs">
                         Community of Physics </a> in the past.
                 </span>
             </div>
