--- a/index.html
+++ b/index.html
@@ -222,9 +222,9 @@
                         <li>Using real-world data to develop virtual patient models</li>
                         <li>Developing models for use in diabetes management tools for patients</li>
                         <li>Assessment of novel techniques to reduce external dependencies</li>
-                        <li>Actively engage with the project team to discuss the project goals, tasks and set priorities</li>
-                        <li>Perform independent data analysis and model building based on team priorities</li>
-                        <li>Report on findings to the project team, department and R&D</li>
+                        <li>Actively engaging with the project team to discuss the project goals, tasks and set priorities</li>
+                        <li>Performing independent data analysis and model building based on team priorities</li>
+                        <li>Reporting on findings to the project team, department and R&D</li>
                     </ul>
                     <hr>
                     <span>
