updated minor details

--- a/index.html
+++ b/index.html
@@ -197,11 +197,13 @@
                   implemented deep convolutional neural network autoencoder
                   (U-Net based) to segment highly class-imbalanced spectrogram
                   images, improving efficiency over traditional methods by more
-                  than 20%. Currently, I am employing natural language
-                  processing (NLP) techniques in machine learning to identify
-                  patterns within noisy signals, thus enabling low power signal
-                  detection. I am also working with resonant cavity mode
-                  filtering and manipulation.
+                  than 20%. I have pioneered a novel use of natural language
+                  processing (NLP) techniques to identify complex patterns within noisy signals, 
+                  enabling signal detection in extremely low power situation.
+                  Currently, I am exploring the use of physics-informed generative AI in reproducing 
+                  complicated electromagnetic signals from particle interactions.
+                  I am also working with various simulation projects, including 
+                  resonant cavity mode filtering and manipulation, sensitivity analysis, etc.
                 </span>
                 <br />
                 <span>
@@ -356,12 +358,12 @@
               <br class="Section-Text" />
               <span class="Section-Text">
                 In addition to my academic pursuits, I am an avid photographer
-                with a deep passion for capturing the beauty of landscapes and
-                architecture, as well as people/pets. During my free time, if I
-                am not working on a home or car project, I like to dedicate my
+                with a deep passion for landscapes and architecture photography. 
+                During my free time, if I am not working on a home or car project, I love spending my
                 time acquiring new skills. I enjoy immersing myself in reading,
                 exploring new realms through video games, and staying active
-                through sports like tennis, soccer, and basketball.
+                through sports like tennis, soccer, and basketball.  
+                I’m always looking for ways to grow and stay engaged.
               </span>
               <br />
             </span>
@@ -439,7 +441,7 @@
                   </a>
                   <br />
                   <a
-                    href="https://project8.org/"
+                    href="www.project8.org"
                     target="_blank"
                     rel="noreferrer noopener"
                     class="home-link15"
@@ -593,7 +595,7 @@
             </div>
             <span class="home-link26">
               <span>©&nbsp;</span>
-              <span class="Anchor">Razu Mohiuddin, 2024</span>
+              <span class="Anchor">Razu Mohiuddin, 2025</span>
             </span>
           </div>
         </div>
