--- a/index.html
+++ b/index.html
@@ -441,9 +441,8 @@
                   </a>
                   <br />
                   <a
-                    href="www.project8.org"
+                    href="https://www.project8.org"
                     target="_blank"
-                    rel="noreferrer noopener"
                     class="home-link15"
                   >
                     The Project 8
@@ -595,7 +594,7 @@
             </div>
             <span class="home-link26">
               <span>©&nbsp;</span>
-              <span class="Anchor">Razu Mohiuddin, 2025</span>
+              <span class="Anchor">Razu Mohiuddin, 2024</span>
             </span>
           </div>
         </div>
