--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                   I am an experimental particle astrophysics doctoral student at
                   Case Western Reserve University. I'm currently working in the
                   Monreal Lab and the Project 8 collaboration, pursuing my
-                  research interests in neutrino physics.
+                  research interests in statistical modeling, deep learning, and neutrino physics.
                 </span>
               </span>
               <a
