--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               <h1 class="home-heading2">
                 <span class="Section-Heading home-text">Razu Mohiuddin</span>
                 <br />
-                <span class="home-text02">Pushing the Boundaries of Physics with Data & Neutrinos</span>
+                <span class="home-text02">Pushing the Boundaries of Physics with Advanced Data Techniques</span>
                 <br />
               </h1>
               <span class="home-text04">
