added floating social buttons

--- a/index.html
+++ b/index.html
@@ -600,5 +600,16 @@
       </div>
     </div>
     <script src="https://unpkg.com/@teleporthq/teleport-custom-scripts"></script>
+        <div id="floating-social-buttons">
+  <a href="https://www.linkedin.com/in/mohiuddinrazu/" target="_blank" rel="noreferrer noopener">
+    <img src="public/linkedin-icon.svg" alt="Linkedin">
+  </a>
+  <a href="https://scholar.google.com/citations?user=JLcRozYAAAAJ&amp;hl=en" target="_blank" rel="noreferrer noopener">
+    <img src="public/google_scholar-icon.svg" alt="Google Scholar">
+  </a>
+  <a href="https://github.com/mohiuddinrazu/" target="_blank" rel="noreferrer noopener">
+    <img src="public/github.svg" alt="GitHub">
+  </a>
+  </div>
   </body>
 </html>
